2007-09-30  Brian Warner  <warner@lothar.com>

	* docs/buildbot.texinfo (WebStatus): explain robots.txt a bit more
	* buildbot/status/web/robots.txt (Disallow): update to cover all
	dynamically-generated pages

	* buildbot/status/web/base.py (map_branches): when we see 'trunk',
	include both 'trunk' and None in the output list, since some VC
	systems (SVN, frequently) refer to trunk as 'trunk'.

	* buildbot/status/web/waterfall.py (WaterfallStatusResource):
	point the 'welcome' link explicitly at index.html, rather than
	'.', so that old Waterfall users can reach it and discover all the
	new pages.

	* buildbot/status/web/base.py (OneLineMixin.make_line): add the
	build's text to the end of the line, without a CSS class so it
	remains uncolored.

	* buildbot/interfaces.py (IStatus.generateFinishedBuilds): add a
	'max_search=' argument, to limit the number of builds that are
	examined while trying to find ones that match the other criteria.
	This helps to limit the work we do, since otherwise we might have
	to trawl through all history.
	(IBuilderStatus.generateFinishedBuilds): same
	* buildbot/status/builder.py (Status.generateFinishedBuilds): same
	(BuilderStatus.generateFinishedBuilds): same

	* buildbot/status/web/base.py (OneLineMixin.make_line): stringify
	our got_revision before checking its length: SVN (at least) still
	reports numeric values for this.
	* buildbot/status/web/build.py (StatusResourceBuild.body): same
	* buildbot/status/web/xmlrpc.py
	(XMLRPCServer.xmlrpc_getAllBuildsInInterval): same, also stop
	serving a completely fake revision

	* buildbot/scripts/runner.py (Maker.check_master_cfg): prepend
	basedir to sys.path, to mimic what a real buildmaster would have
	access to, since it is common for master.cfg to import helper
	classes from .py files in the buildmaster directory, and we want
	config-file checking to accomodate this.

	* buildbot/status/web/base.py (map_branches): when referring to